spacing fix

--- a/portfolio/files/css/styles.css
+++ b/portfolio/files/css/styles.css
@@ -305,7 +305,8 @@ a{
 }
 
 .about-header img{
-	margin-left: 10px;
+	margin-left: 30px;
+	margin-top: 10px;
 }
 
 .about-title{
